# InfoTest_Engine

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  WHATS_NEW.md  environment.example  fix_rating_table.sql  know_issue.md  langgraph.json  netstat  plan_mcp.md  pyproject.toml  pytest.ini  requirements.txt  ssh_users.example.json  todolist.md
.claude/: settings.json
.codex/: hooks.json
.devin/: wiki.json
MCP_Server/: .env.example  README.md  pyproject.toml  server.py
MCP_Server/src/apv_mcp_server/: __init__.py  _mcp_compat.py  restapi_apv.py  server.py  ssh_apv.py  telnet_apv.py
docs/: ANALYSIS_dongkl_ask_review.md  AUDIT_attribution_ask_worker_gaps.md  AUDIT_delivery_readiness.md  AUDIT_design_theory_gaps.md  AUDIT_engine_gaps_round2.md  AUDIT_engine_vs_theory.md  AUDIT_gate_inventory_20260714.md  AUDIT_skill_bestpractice_v2.md  AUDIT_skill_standard_alignment.md  AUDIT_yzg_full_system_check.md  CLAUDE_USAGE_GUIDE.md  DESIGN_dongkl_finalization.md  DESIGN_grade_grounding.md  DESIGN_v6_engine.md  DESIGN_v8_engine.md  DIAG_035413_reasoning_divergence.md  DIAG_v6_shakedown_rootcauses.md  HANDOFF_20260715.md  PLAN_footprint_v2_compile.md  PLAN_v3R_revised.md  PLAN_v3_closed_loop_compile.md  PLAN_v4_engine.md  PROMPT_ENGINEERING_STANDARD.md  RESEARCH_ask_design_survey.md  RESEARCH_llm_test_automation_comparison.md  RESEARCH_mimocode_backfill.md  RESEARCH_opencode_backfill.md  RESEARCH_theory_data_checks.md  REVIEW_payload_channel_gap.md  REVIEW_theory_vs_impl.md  RUN_yzg_langfuse_monitor.md  TEAM_WORKFLOW.md  THEORY_infra_reliability.md  THEORY_k_state_machine.md  THEORY_target_system_algebra.md  TODO_attributor_s0_mechanical_recheck.md  TODO_f6_claim_kind_unify.md  TODO_s0_l23_infra_ip_exclusion.md  TODO_tui_ask_user_panel_clear.md  TRAJECTORY_035413_worker_vs_main.md  (+20 more)
experiments/: phase7_skill_simplify_results.md
logserver/: __init__.py  __main__.py  app.py
main/: __init__.py  cli_command_utils.py  framework_sync.py  function_llm.py  kms_classifier.py  kms_postprocess.py  knowledge_paths.py  langchain_env.py  mineru_batch_export.py  mineru_source_index.py  terminal_progress.py  utils.py  xlsx_to_markdown.py
memory/: AGENTS.md
scripts/: adoc_to_md.py  gen_method_reference.py  parse_cli_manual.py
tests/: conftest.py  test_case_compiler_stageA.py  test_cli_command_utils.py  test_env_facts.py  test_function_llm_urls.py  test_mineru_batch_export_exit.py  test_mineru_source_index.py  test_orgin_nested_enum.py  test_promote_grain.py  test_skill_lib_ab_gate.py  (+6 more)
(+981 files in other folders)
