[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infotest-engine"
version = "0.1.0"
description = "InfoTest Engine — IST-Core test analysis platform"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["dependencies"]

[project.scripts]
infotest = "main.qa_agent.tui.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["main*", "scripts*"]
exclude = ["tests*", "agent-chat-ui*", "knowledge*", "logs*", "tmp*", "review_inputs*", "docs*"]

[tool.setuptools.package-data]
"main.qa_agent.tui" = ["*.tcss"]
