[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infotest-engine"
version = "1.0.5"
description = "InfoTest Engine — IST-Core test analysis platform"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["dependencies"]

[project.scripts]
infotest = "main.ist_core.tui.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["main*", "scripts*"]
exclude = ["tests*", "knowledge*", "logs*", "tmp*", "review_inputs*", "docs*"]

[tool.setuptools.package-data]
"main.ist_core.tui" = ["*.tcss"]
